cleanup and streamline